unpackaged/main/default/objects/NA_Form__c/NA_Form__c.object-meta.xml
<CustomObject>
    <description>Used for creating an automated &quot;form&quot;.</description>
    <label>NA Form</label>
    <nameField>
        <displayFormat>Form-{0000}</displayFormat>
        <label>US Forms</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NA Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>