unpackaged/main/default/objects/NA_Form__c/fields/Account_Currency__c.field-meta.xml
<CustomField>
    <fullName>Account_Currency__c</fullName>
    <label>Account Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD - U.S. Dollar</fullName>
            </value>
            <value>
                <fullName>CAD - Canadian Dollar</fullName>
            </value>
            <value>
                <fullName>EUR - Euro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>