unpackaged/main/default/objects/NA_Form__c/fields/Already_in_Lightning__c.field-meta.xml
<CustomField>
    <fullName>Already_in_Lightning__c</fullName>
    <label>Already in Lightning?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>