unpackaged/main/default/objects/NA_Form__c/fields/Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country__c</fullName>
    <inlineHelpText>Please enter the two digit country abbreviation.</inlineHelpText>
    <label>Billing Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>