unpackaged/main/default/objects/NA_Form__c/fields/Exhibition_Opportunity_Related__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Opportunity_Related__c</fullName>
    <label>Is Exhibition - AV Firm Opp Related?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>