unpackaged/main/default/objects/NA_Form__c/fields/Facility_Account__c.field-meta.xml
<CustomField>
    <fullName>Facility_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facility Account</label>
    <type>Checkbox</type>
</CustomField>