unpackaged/main/default/objects/NA_Form__c/fields/Firm_Account__c.field-meta.xml
<CustomField>
    <fullName>Firm_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Firm Account</label>
    <type>Checkbox</type>
</CustomField>