unpackaged/main/default/objects/NA_Form__c/fields/Is_this_a_Producer_Agency__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_Producer_Agency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this Account is a Producer or Agency, check the box.</description>
    <label>Is this a Producer/Agency?</label>
    <type>Checkbox</type>
</CustomField>