unpackaged/main/default/objects/NA_Form__c/fields/Name_of_Lead__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name of Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>NA Forms</relationshipLabel>
    <relationshipName>NA_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>