unpackaged/main/default/objects/NA_Form__c/fields/New_Firm_Exhibitor_Account_Instructions__c.field-meta.xml
<CustomField>
    <fullName>New_Firm_Exhibitor_Account_Instructions__c</fullName>
    <defaultValue>&quot;Please fill out all the required fields to request a new Firm/Exhibitor Account in Salesforce. If this account/client also needs to be added/updated in Lightning, please select an option on the For Lightning Only: field.&quot;</defaultValue>
    <label>New Firm/Exhibitor Account Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>