unpackaged/main/default/objects/NA_Form__c/fields/New_Opportunity_Instructions__c.field-meta.xml
<CustomField>
    <fullName>New_Opportunity_Instructions__c</fullName>
    <defaultValue>&quot;Please fill out all the required fields to request a new Opportunity in Salesforce.&quot;</defaultValue>
    <label>New Opportunity Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>