unpackaged/main/default/objects/NA_Form__c/fields/New_Show_Instructions__c.field-meta.xml
<CustomField>
    <fullName>New_Show_Instructions__c</fullName>
    <defaultValue>&quot;Please fill out all the required fields to request a new Show or Non-Show in Salesforce.&quot;</defaultValue>
    <label>New Show/Non_Show Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>