unpackaged/main/default/objects/NA_Form__c/fields/Non_Show_Name__c.field-meta.xml
<CustomField>
    <fullName>Non_Show_Name__c</fullName>
    <label>Non-Show Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>