unpackaged/main/default/objects/NA_Form__c/fields/ON_Site_ON_Services_Win__c.field-meta.xml
<CustomField>
    <fullName>ON_Site_ON_Services_Win__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ON Site/ ON Services Win:</label>
    <type>Checkbox</type>
</CustomField>