unpackaged/main/default/objects/NA_Form__c/fields/ONS_Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>ONS_Sales_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ONS Sales Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NA_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>