unpackaged/main/default/objects/NA_Form__c/fields/Related_Show_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Show_ID__c</fullName>
    <label>Related Show ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>