unpackaged/main/default/objects/NA_Form__c/fields/Shipping_Zip_4__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Zip_4__c</fullName>
    <label>Shipping Zip+4</label>
    <length>10</length>
    <type>Text</type>
</CustomField>