unpackaged/main/default/objects/NA_Form__c/fields/Show_ID__c.field-meta.xml
<CustomField>
    <fullName>Show_ID__c</fullName>
    <inlineHelpText>Leave blank if requesting a Show simultaneously.</inlineHelpText>
    <label>Show ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>