unpackaged/main/default/objects/NA_Form__c/fields/Show_Name__c.field-meta.xml
<CustomField>
    <fullName>Show_Name__c</fullName>
    <inlineHelpText>Official Name of the Show - no abbreviations.</inlineHelpText>
    <label>Show/ Non-Show Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>