unpackaged/main/default/objects/NA_Form__c/fields/Will_be_created_from_Lead__c.field-meta.xml
<CustomField>
    <fullName>Will_be_created_from_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Will be created from Lead:</label>
    <type>Checkbox</type>
</CustomField>