unpackaged/main/default/objects/NA_Form__c/recordTypes/ONS_Facility_Account.recordType-meta.xml
<RecordType>
    <fullName>ONS_Facility_Account</fullName>
    <active>true</active>
    <description>Select this option if you want a FACILITY Account created</description>
    <label>ONS Account - Facility</label>
</RecordType>