unpackaged/main/default/objects/NA_Form__c/recordTypes/ONS_Firm_Account.recordType-meta.xml
<RecordType>
    <fullName>ONS_Firm_Account</fullName>
    <active>true</active>
    <description>Select this option if you want a FIRM or Exhibitor Account created</description>
    <label>ONS Account - Firm or Exhibitor</label>
</RecordType>