unpackaged/main/default/objects/NA_Form__c/recordTypes/ONS_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>ONS_Opportunity</fullName>
    <active>true</active>
    <description>Select this option if you need an Opportunity created</description>
    <label>ONS Opportunity</label>
</RecordType>