unpackaged/main/default/objects/NA_Form__c/recordTypes/ONS_Show.recordType-meta.xml
<RecordType>
    <fullName>ONS_Show</fullName>
    <active>true</active>
    <description>Select this option if you want a Show or Non-Show created</description>
    <label>ONS Show/Non-Show</label>
</RecordType>