unpackaged/main/default/objects/NA_Form__c/validationRules/Acct_req_on_Show_or_NonShow.validationRule-meta.xml
<ValidationRule>
    <fullName>Acct_req_on_Show_or_NonShow</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(Account_Name__c),
ISBLANK(Salesforce_Account__c),

OR(
$RecordType.Id = &quot;0122a0000008m2H&quot;, 
$RecordType.Id = &quot;0122a0000008m2M&quot;)

)</errorConditionFormula>
    <errorDisplayField>Account_Name__c</errorDisplayField>
    <errorMessage>You must complete one of the Account fields.
Fill in Account Name if the Account is not yet in Salesforce.
Fill in Salesforce Account if the Account is already in Salesforce.</errorMessage>
</ValidationRule>