unpackaged/main/default/objects/NA_Form__c/validationRules/If_Urgent_Date_Time_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Urgent_Date_Time_Required</fullName>
    <active>true</active>
    <description>If Urgent, Date/Time Required</description>
    <errorConditionFormula>AND(
URGENT__c = TRUE,
ISBLANK(Date_Time_Needed_By__c))</errorConditionFormula>
    <errorDisplayField>Date_Time_Needed_By__c</errorDisplayField>
    <errorMessage>If Urgent, please enter a Date/Time Needed By.</errorMessage>
</ValidationRule>