unpackaged/main/default/objects/NA_Form__c/validationRules/Related_Show_ID_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Related_Show_ID_required</fullName>
    <active>true</active>
    <description>Related Show ID required if Related AV Exhibition Opp = Yes</description>
    <errorConditionFormula>AND(ISPICKVAL(Exhibition_Opportunity_Related__c ,&quot;Yes&quot;), 
ISBLANK(Related_Show_ID__c ))</errorConditionFormula>
    <errorDisplayField>Account_Currency__c</errorDisplayField>
    <errorMessage>Please enter the related Show ID.</errorMessage>
</ValidationRule>