unpackaged/main/default/objects/NA_Form__c/listViews/My_Forms.listView-meta.xml
<ListView>
    <fullName>My_Forms</fullName>
    <columns>Completed__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Account_Name__c</columns>
    <columns>Project_End_Date__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Date_Time_Needed_By__c</columns>
    <columns>URGENT__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Forms</label>
</ListView>